use new library-usage check