@@ -1,12 +1,12 @@
 package org.openlca.app.navigation.actions.libraries;
 
-import static org.openlca.app.licence.LibrarySession.removeSession;
+import static org.openlca.app.licence.LibrarySession.*;
 
 import java.io.File;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Stream;
 
 import org.eclipse.jface.action.Action;
 import org.eclipse.jface.resource.ImageDescriptor;
@@ -22,11 +22,9 @@ import org.openlca.app.rcp.images.Icon;
 import org.openlca.app.util.ErrorReporter;
 import org.openlca.app.util.MsgBox;
 import org.openlca.app.util.Question;
-import org.openlca.core.database.Derby;
+import org.openlca.core.database.IDatabase;
+import org.openlca.core.database.LibraryUsage;
 import org.openlca.core.database.MySQL;
-import org.openlca.core.database.config.DatabaseConfig;
-import org.openlca.core.database.config.DerbyConfig;
-import org.openlca.core.database.config.MySqlConfig;
 import org.openlca.core.library.Library;
 import org.openlca.util.Dirs;
 
@@ -38,7 +36,7 @@ public class DeleteLibraryAction extends Action implements INavigationAction {
 	public boolean accept(List<INavigationElement<?>> selection) {
 		if (selection.size() != 1)
 			return false;
-		var first = selection.get(0);
+		var first = selection.getFirst();
 		if (first instanceof LibraryElement) {
 			this.element = (LibraryElement) first;
 			return true;
@@ -82,20 +80,16 @@ public class DeleteLibraryAction extends Action implements INavigationAction {
 			return;
 
 		// check that it is not used
-		var usage = App.exec(
-				M.CheckIfLibraryIsUsedDots,
-				() -> Usage.find(lib));
+		var usage = App.exec(M.CheckIfLibraryIsUsedDots, () -> Usage.find(lib));
 		if (usage.isPresent()) {
 			var u = usage.get();
 			if (u.isError()) {
-				ErrorReporter.on(
-						"Failed to check usage of library '"
-								+ lib.name() + "'",
-						u.error);
+				ErrorReporter.on("Failed to check usage of library '"
+					+ lib.name() + "'", u.error);
 				return;
 			}
 			MsgBox.info(M.CannotDeleteLibrary, M.CannotDeleteLibraryInfo
-					+ "\r\n " + u.label());
+				+ "\r\n " + u.label());
 			return;
 		}
 
@@ -111,8 +105,12 @@ public class DeleteLibraryAction extends Action implements INavigationAction {
 
 	private record Usage(String name, UsageType type, String error) {
 
-		private static Usage db(DatabaseConfig config) {
-			return new Usage(config.name(), UsageType.DATABASE, null);
+		private static Usage error(String err) {
+			return new Usage(null, null, err);
+		}
+
+		private static Usage db(String name) {
+			return new Usage(name, UsageType.DATABASE, null);
 		}
 
 		private static Usage lib(Library lib) {
@@ -123,58 +121,70 @@ public class DeleteLibraryAction extends Action implements INavigationAction {
 
 			// first check in other libraries (this is fast)
 			var usage = Workspace.getLibraryDir()
-					.getLibraries()
-					.stream()
-					.filter(other -> !Objects.equals(other, lib))
-					.map(other -> Usage.of(other, lib))
-					.filter(Optional::isPresent)
-					.map(Optional::get)
-					.findAny();
+				.getLibraries()
+				.stream()
+				.filter(other -> !Objects.equals(other, lib))
+				.map(other -> Usage.of(other, lib))
+				.filter(Optional::isPresent)
+				.map(Optional::get)
+				.findAny();
 			if (usage.isPresent())
 				return usage;
 
-			// then check in databases
+			// test the current active database; the fastest
+			usage = usageOf(Database.get(), lib);
+			if (usage.isPresent())
+				return usage;
+
+			// check the Derby databases
 			var configs = Database.getConfigurations();
-			return Stream.concat(
-					configs.getDerbyConfigs().stream(),
-					configs.getMySqlConfigs().stream())
-					.parallel()
-					.map(config -> Usage.of(config, lib))
-					.filter(Optional::isPresent)
-					.map(Optional::get)
-					.findAny();
+			var derbyDirs = new ArrayList<File>();
+			for (var cs : configs.getDerbyConfigs()) {
+				if (Database.isActive(cs))
+					continue;
+				derbyDirs.add(new File(Workspace.dbDir(), cs.name()));
+			}
+			var res = LibraryUsage.databasesOf(derbyDirs, lib.name());
+			if (res.isError())
+				return Optional.of(Usage.error(res.error()));
+			if(!res.value().isEmpty()) {
+				var first = res.value().getFirst();
+				return Optional.of(Usage.db(first.getName()));
+			}
+
+			// check possible MySQL databases; very unlikely
+			for (var c : configs.getMySqlConfigs()) {
+				if (Database.isActive(c))
+					continue;
+				try {
+					if (MySQL.containsLibrary(c.config(), lib.name()))
+						return Optional.of(Usage.db(c.name()));
+				} catch (Exception e) {
+					return Optional.of(Usage.error(e.getMessage()));
+				}
+			}
+
+			return Optional.empty();
 		}
 
-		static Optional<Usage> of(DatabaseConfig config, Library lib) {
-			if (config == null)
+		private static Optional<Usage> usageOf(IDatabase db, Library lib) {
+			if (db == null)
 				return Optional.empty();
-			if (Database.isActive(config)) {
-				var db = Database.get();
+			try {
 				return db.getLibraries().contains(lib.name())
-						? Optional.of(Usage.db(config))
-						: Optional.empty();
+					? Optional.of(Usage.db(db.getName()))
+					: Optional.empty();
+			} catch (Exception e) {
+				return Optional.of(Usage.error(e.getMessage()));
 			}
-			if (config instanceof DerbyConfig) {
-				return Derby.containsLibrary(new File(Workspace.dbDir(), config.name()), lib.name())
-						? Optional.of(Usage.db(config))
-						: Optional.empty();
-			} else if (config instanceof MySqlConfig conf) {
-				return MySQL.containsLibrary(conf.config(), lib.name())
-						? Optional.of(Usage.db(config))
-						: Optional.empty();
-			}
-			var usage = new Usage(
-					config.name(), UsageType.DATABASE,
-					"Unknown database config type: " + config.getClass().getName());
-			return Optional.of(usage);
 		}
 
 		static Optional<Usage> of(Library other, Library lib) {
 			if (Objects.equals(other, lib))
 				return Optional.empty();
 			return other.getDirectDependencies().contains(lib)
-					? Optional.of(Usage.lib(other))
-					: Optional.empty();
+				? Optional.of(Usage.lib(other))
+				: Optional.empty();
 		}
 
 		boolean isError() {
@@ -183,8 +193,8 @@ public class DeleteLibraryAction extends Action implements INavigationAction {
 
 		String label() {
 			return type == UsageType.DATABASE
-					? "database " + name
-					: "library " + name;
+				? "database " + name
+				: "library " + name;
 		}
 	}
 
